@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-25T01:10:42Z",
-  "count_outdated" : 341,
-  "uniques_outdated" : 93,
+  "timestamp" : "2023-10-25T16:20:00Z",
+  "count_outdated" : 360,
+  "uniques_outdated" : 94,
   "count" : 377,
   "uniques" : 97,
   "views" : [
-    {
-      "timestamp": "2023-10-11T00:00:00Z",
-      "count": 19,
-      "count_minmax": [ 19, 19 ],
-      "count_decinc": [ 0, 19 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 4,
