@@ -1,12 +1,7 @@
 {
-  "count": 36,
+  "count": 17,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2023-10-11T00:00:00Z",
-      "count": 19,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 4,
